# coopemon

./: CMakeLists.txt  CMakePresets.json  README.md
data/: coopemons.json  player_party.json
include/: tui.hpp
source/: main.cpp
source/characters/: Coopemon.cpp  Coopemon.h  Move.cpp  Move.h  Trainer.cpp  Trainer.h
source/config/: Dialogue.h  Paths.h
source/gameplay/: battle.cpp  battle.h
source/interface/: menu.cpp  menu.h  messaging.cpp  messaging.h  prompting.cpp  prompting.h
source/utilities/: JsonUtilities.cpp  JsonUtilities.h
